# narc-rs

./: CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
.github/: README.md
.github/workflows/: rust.yml
rustdoc/: generate.sh  install-linux.sh  install-windows.bat
samples/: test.pl
samples/basic/: data-and-cons.narc  data-and-cons.out  id-func.narc  peano.narc  peano.out
samples/wip/: tyck-against-meta.narc  tyck-against-meta.out
src/: lib.rs
src/check/: eval.rs  mod.rs
src/check/monad/: error.rs  meta.rs  mod.rs  state.rs
src/check/pats/: block.rs  core.rs  mat.rs  mod.rs  tests.rs
src/check/rules/: clause.rs  data.rs  decls.rs  eval.rs  infer.rs  mod.rs  term.rs  unify.rs  whnf.rs
src/check/rules/clause/: eqs.rs  lhs.rs  mod.rs  problem.rs  split.rs  state.rs
src/check/rules/term/: infer.rs  meta.rs  mod.rs  unify.rs  view.rs  whnf.rs
src/cli/: args.rs  mod.rs  util.rs
src/syntax/: common.rs  mod.rs  pat.rs
src/syntax/abs/: ast.rs  decl.rs  decl_impl.rs  mod.rs  pretty.rs
src/syntax/abs/desugar/: decls.rs  error.rs  exprs.rs  mod.rs  monad.rs  tests.rs
src/syntax/core/: ast.rs  ast_cons.rs  ast_fold.rs  ast_util.rs  ctx.rs  decl.rs  decl_impl.rs  level.rs  mod.rs  neut_iter.rs  pat.rs  pretty.rs  redex.rs  subst.rs
src/syntax/core/subst/: apply.rs  dbi.rs  mod.rs  prim.rs  redex.rs
src/syntax/surf/: ast.rs  grammar.pest  mod.rs  parse.rs  tests.rs
